--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,422 @@
 # created with git log --stat=76 -M -C -500|fmt -sct -w80
 
+commit 1d8e030b12a35676308e1e57e2ae1acf3dd41231
+Merge: 4f3c2fc9 0bb305af
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Wed Sep 16 23:25:20 2020 +0200
+
+    Merge branch 'icewm-1-4-BRANCH'
+
+commit 0bb305afe4be0506fdc2c725abf8f0ef0c6c1c48
+Merge: d8b6c997 8cdd5da5
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Wed Sep 16 19:32:01 2020 +0200
+
+    Merge remote-tracking branch 'upstream/icewm-1-4-BRANCH' into
+    icewm-1-4-BRANCH
+
+commit 8cdd5da58df9dfa4224e433ee14ed6184c5c84d2
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Wed Sep 16 03:52:28 2020 +0200
+
+    Prevent compiler warning on chdir.
+
+ src/icesm.cc | 2 +-
+ 1 file changed, 1 insertion(+), 1 deletion(-)
+
+commit 2552cf5efa2f3542a1b6900c8f8145ba23e19ce6
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Wed Sep 16 03:43:36 2020 +0200
+
+    Use pragmas to prevent compiler complaints if LOGEVENTS.
+
+ src/logevent.cc | 12 ++++++++++++
+ 1 file changed, 12 insertions(+)
+
+commit a05d15f944da15d3f16b7edcef9d2672771a5497
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Wed Sep 16 02:21:24 2020 +0200
+
+    Make it compile on G++ 7.5.0.
+
+ src/wmtaskbar.cc | 17 ++++++++---------
+ 1 file changed, 8 insertions(+), 9 deletions(-)
+
+commit 47503036a1b06dde9390d7b9dbad75d5f50dd9f9
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Wed Sep 16 02:04:56 2020 +0200
+
+    Reduce number of workarea updates for taskbar.
+    Only let taskbar have struts if at top or bottom of screen.
+    Keep global positioning of internal clients local to clients.
+    Fix for autohide taskbar not wanting to hide.
+    Support TaskBarAutoHide for TaskBarKeepBelow.
+
+ src/wmapp.cc     |  4 +---
+ src/wmframe.cc   | 48 +++++++++++++++++++++++++-----------------------
+ src/wmtaskbar.cc | 46 +++++++++++++++++++++++++++++++---------------
+ src/wmtaskbar.h  |  2 +-
+ src/ytooltip.cc  |  2 +-
+ 5 files changed, 59 insertions(+), 43 deletions(-)
+
+commit e4cec2cc0d9a5912f89c82ccb8aa3e3f2758d91c
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Sep 15 21:40:29 2020 +0200
+
+    Fix tooltip positioning.
+
+ src/ytooltip.cc | 2 +-
+ 1 file changed, 1 insertion(+), 1 deletion(-)
+
+commit 1f893bc5edbec9fe0d8f75b5c2cba20c50abb3a7
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Sep 15 18:27:45 2020 +0200
+
+    Prefer tlog over printf when logging.
+
+ src/logevent.cc | 4 ++--
+ 1 file changed, 2 insertions(+), 2 deletions(-)
+
+commit 78e0505335f250e077e13105aa0601728baaad11
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Sep 15 18:04:51 2020 +0200
+
+    Send synthetic ConfigureNotify events for resizing only when required
+    by the ICCCM specification.
+    Send synthetic ConfigureNotify events for positioning whenever this is
+    required by the ICCCM specification.
+    Fix for EWMH restack raise requests.
+    Reflect layer changes in the ABOVE and BELOW flags in the EWMH
+    _NET_WM_STATE property.
+    Only update the frame position when it really has changed.
+
+ src/decorate.cc |  10 +++--
+ src/wmframe.cc  | 116 ++++++++++++++++++++++------------------------------
+ src/wmframe.h   |   8 ++--
+ 3 files changed, 61 insertions(+), 73 deletions(-)
+
+commit f466a9cfaf68564d58dd85cd9f8db5faa2a94a1c
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Sep 15 18:04:33 2020 +0200
+
+    Check if a map request is for a mapped window.
+
+ src/wmcontainer.cc | 12 ++++++------
+ 1 file changed, 6 insertions(+), 6 deletions(-)
+
+commit 6bb621c83a8d2eee262f4e44848ed0e634defcd1
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Sep 15 18:00:32 2020 +0200
+
+    Simplify removing a frame app from the taskbar.
+
+ src/atasks.cc    | 14 +++-----------
+ src/atasks.h     |  1 -
+ src/atray.cc     | 29 +++++++++++------------------
+ src/atray.h      |  2 +-
+ src/wmtaskbar.cc |  4 ++--
+ 5 files changed, 17 insertions(+), 33 deletions(-)
+
+commit 3e8f53cdba6e25f2785789d570ca6e3f26faeeac
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Sep 13 23:24:39 2020 +0200
+
+    make update-po
+
+ po/ar.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/be.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/bg.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/ca.po     | 143 +++++++++++++++++++++++++++---------------------------
+ po/cs.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/da.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/de.po     | 143 +++++++++++++++++++++++++++---------------------------
+ po/el.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/en.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/es.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/fi.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/fr.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/he.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/hr.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/hu.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/icewm.pot | 142 +++++++++++++++++++++++++++---------------------------
+ po/id.po     | 143 +++++++++++++++++++++++++++---------------------------
+ po/it.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/ja.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/ko.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/lt.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/lv.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/mk.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/nb.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/nl.po     | 144 +++++++++++++++++++++++++++----------------------------
+ po/no.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/pl.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/pt.po     |  62 ++++++++++++------------
+ po/pt_BR.po  | 143 +++++++++++++++++++++++++++---------------------------
+ po/ro.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/ru.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/sk.po     | 143 +++++++++++++++++++++++++++---------------------------
+ po/sl.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/sv.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/tr.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/uk.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/vi.po     | 140 ++++++++++++++++++++++++++---------------------------
+ po/zh_CN.po  | 140 ++++++++++++++++++++++++++---------------------------
+ po/zh_TW.po  | 140 ++++++++++++++++++++++++++---------------------------
+ 39 files changed, 2694 insertions(+), 2709 deletions(-)
+
+commit 7ecb6850cab22efde2d1eed0b2d653bfa7879388
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Sep 13 23:07:26 2020 +0200
+
+    Add WinStateFullscreen to the visible _WIN_STATE bits.
+
+ src/WinMgr.h | 4 ++--
+ 1 file changed, 2 insertions(+), 2 deletions(-)
+
+commit a5363651a3de7895f5a7e06729c4058d3c98fef8
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Sep 13 22:57:31 2020 +0200
+
+    Simplify setState with deltaState.
+
+ src/wmframe.cc | 37 +++++++++++++++++++------------------
+ 1 file changed, 19 insertions(+), 18 deletions(-)
+
+commit c30c1c1fcadce54e8c8c9858c284666a3a986083
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Sep 13 22:34:36 2020 +0200
+
+    Check if icon is null.
+
+ src/ymenu.cc | 11 +++++++----
+ 1 file changed, 7 insertions(+), 4 deletions(-)
+
+commit d7f1464ca56b81dadd919892499e72aa75c68b9d
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Sep 13 22:33:53 2020 +0200
+
+    Make switch icons opaque for 32-bit visuals.
+
+ src/wmswitch.cc | 15 +++++++++++----
+ src/wmswitch.h  |  1 +
+ 2 files changed, 12 insertions(+), 4 deletions(-)
+
+commit 3249d058edd6c2104c8c18d7ac10f350ccd4b17f
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Sep 13 22:32:23 2020 +0200
+
+    Postpone taskbar app status updates until idle.
+
+ src/wmframe.cc   | 15 ++++++++-------
+ src/wmframe.h    |  1 +
+ src/wmtaskbar.cc | 39 +++++++++++++++++++++------------------
+ src/wmtaskbar.h  | 16 ++++++++++------
+ 4 files changed, 40 insertions(+), 31 deletions(-)
+
+commit 1eae0c0749fcc352d1863a2e520ded3b770027d3
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Sep 13 22:30:59 2020 +0200
+
+    Merge WM_WINDOW_ROLE and WINDOW_ROLE.
+
+ src/wmclient.cc | 26 +++-----------------------
+ src/wmclient.h  |  3 +--
+ 2 files changed, 4 insertions(+), 25 deletions(-)
+
+commit 41e4bfda5cb4d203cc1b41e370ee46a5613861d9
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Sep 13 22:30:04 2020 +0200
+
+    Fix -list. Add +T. Print CARDINALs as unsigned. Show Above window handle
+    for ConfigureNotify.
+
+ src/icesh.cc | 35 +++++++++++++++++++++++++++++++----
+ 1 file changed, 31 insertions(+), 4 deletions(-)
+
+commit 4fab5478a6335c14943db1ab75881ff7d801633e
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sun Sep 13 22:27:58 2020 +0200
+
+    Only load icon if needed.
+
+ src/atasks.cc | 14 +++++++-------
+ 1 file changed, 7 insertions(+), 7 deletions(-)
+
+commit 662905903d52f2868937e73cc4a7765e1ab85794
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sat Sep 12 01:05:35 2020 +0200
+
+    Send just one ConfigureNotify message per resize.
+    In setState first compute size and relayout before updating
+    _NET_WM_STATE and _WIN_LAYER for issue #491 and
+    postpone low-priority updates for different timing for GTK-menubar
+    terminals.
+
+ src/wmframe.cc | 161 +++++++++++++++++++++--------------------------------
+ 1 file changed, 65 insertions(+), 96 deletions(-)
+
+commit 3a0452973dd1c81f8c07538650807e721e3883ba
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sat Sep 12 01:04:20 2020 +0200
+
+    More succinct _NET_WM_STATE implementation.
+
+ src/wmclient.cc | 24 ++++++++----------------
+ 1 file changed, 8 insertions(+), 16 deletions(-)
+
+commit 0cfb46d98ad3ffcb9181719151dd556c64498c0f
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sat Sep 12 01:03:57 2020 +0200
+
+    Show more detail in logConfigureRequest and logClientMessage.
+
+ src/logevent.cc | 85 +++++++++++++++++++++++++++++++++--------------------
+ 1 file changed, 53 insertions(+), 32 deletions(-)
+
+commit 5a1ae06121bc31da020a9def0b98dab3b374d165
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Sat Sep 12 01:00:35 2020 +0200
+
+    Support "toggleState Fullscreen". Show state detail for spy ClientMessage.
+    Support "iconic" and "normal" commands for WM_CHANGE_STATE.
+
+ src/icesh.cc | 58 ++++++++++++++++++++++++++++++++++++++++++--------------
+ 1 file changed, 44 insertions(+), 14 deletions(-)
+
+commit 356f55d79c0ee0a02723dece90967166b981f4d8
+Author: Freek de Kruijf <freek@opensuse.org>
+Date:   Thu Sep 10 14:33:56 2020 +0000
+
+    Translated using Weblate (Dutch)
+
+    Currently translated at 100.0% (469 of 469 strings)
+
+ po/nl.po | 36 ++++++++----------------------------
+ 1 file changed, 8 insertions(+), 28 deletions(-)
+
+commit 99dff22b92b8abe6bf1cd5d62dc39fc76f2f4710
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Thu Sep 10 14:24:19 2020 +0200
+
+    Restore the translation which was overwritten by Weblate.
+
+ po/pt.po | 2253 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
+ 1 file changed, 2194 insertions(+), 59 deletions(-)
+
+commit b27252e4ea4a7eb9cb9fc39b454b7f0569de7325
+Author: Hugo Carvalho <hugokarvalho@hotmail.com>
+Date:   Thu Sep 10 08:48:23 2020 +0000
+
+    Translated using Weblate (Portuguese)
+
+    Currently translated at 100.0% (84 of 84 strings)
+
+ po/pt.po | 4 ++--
+ 1 file changed, 2 insertions(+), 2 deletions(-)
+
+commit bfa7a5951bb1a6d2467bcfb8720dc66485f84e1f
+Author: Hugo Carvalho <hugokarvalho@hotmail.com>
+Date:   Wed Sep 9 22:59:45 2020 +0000
+
+    Translated using Weblate (Portuguese)
+
+    Currently translated at 100.0% (84 of 84 strings)
+
+ po/pt.po | 2207 +---------------------------------------------------------
+ 1 file changed, 21 insertions(+), 2186 deletions(-)
+
+commit 78145d5b0dad7ec49e05cd4a866f19851974fc7c
+Merge: d70673ea 3b70ad6a
+Author: Stanislav Brabec <sbrabec@suse.cz>
+Date:   Wed Sep 9 20:39:15 2020 +0200
+
+    Merge remote-tracking branch 'weblate/icewm-1-4-BRANCH' into
+    icewm-1-4-BRANCH
+
+commit 3b70ad6aa3710fd086d311d2f45969e69574898a
+Author: Paolo Za <zapaolo@email.it>
+Date:   Wed Aug 26 19:11:40 2020 +0000
+
+    Translated using Weblate (Italian)
+
+    Currently translated at 99.8% (468 of 469 strings)
+
+ po/it.po | 37 +++++++++----------------------------
+ 1 file changed, 9 insertions(+), 28 deletions(-)
+
+commit d70673eaf7e41c25b8bb6d9a7c434a0936eaf0a7
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Sep 8 22:16:50 2020 +0200
+
+    Use wmHide or wmShow to hide or show the taskbar for #489.
+
+ src/wmtaskbar.cc | 4 +---
+ 1 file changed, 1 insertion(+), 3 deletions(-)
+
+commit f160a3ceecccc27230aa4224bc0d60f03657e690
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Sep 8 21:44:21 2020 +0200
+
+    TaskBar cannot fullscreen.
+
+ src/movesize.cc | 4 ++++
+ src/wmframe.h   | 2 +-
+ 2 files changed, 5 insertions(+), 1 deletion(-)
+
+commit 4f3c2fc9b5df9aa2b9e5c9726a0a7e9a15bfe317
+Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Date:   Tue Sep 8 00:55:57 2020 +0200
+
+    Prepare 1.8.2 release
+
+ AUTHORS      |    3 +-
+ ChangeLog    | 1017 ++++++++++++++++++++++++++----------------------------
+ NEWS         |  128 +++----
+ README.md    |   38 +-
+ RELEASE.md   |    2 +-
+ VERSION      |    2 +-
+ configure.ac |   10 +-
+ po/ar.po     |  118 +++----
+ po/be.po     |  118 +++----
+ po/bg.po     |  118 +++----
+ po/ca.po     |  118 +++----
+ po/cs.po     |  118 +++----
+ po/da.po     |  118 +++----
+ po/de.po     |  118 +++----
+ po/el.po     |  118 +++----
+ po/en.po     |  118 +++----
+ po/es.po     |  118 +++----
+ po/fi.po     |  118 +++----
+ po/fr.po     |  118 +++----
+ po/he.po     |  118 +++----
+ po/hr.po     |  118 +++----
+ po/hu.po     |  118 +++----
+ po/icewm.pot |  120 +++----
+ po/id.po     |  118 +++----
+ po/it.po     |  118 +++----
+ po/ja.po     |  118 +++----
+ po/ko.po     |  118 +++----
+ po/lt.po     |  118 +++----
+ po/lv.po     |  118 +++----
+ po/mk.po     |  118 +++----
+ po/nb.po     |  118 +++----
+ po/nl.po     |  118 +++----
+ po/no.po     |  118 +++----
+ po/pl.po     |  118 +++----
+ po/pt.po     |  432 +++++++++++------------
+ po/pt_BR.po  |  118 +++----
+ po/ro.po     |  118 +++----
+ po/ru.po     |  118 +++----
+ po/sk.po     |  118 +++----
+ po/sl.po     |  118 +++----
+ po/sv.po     |  118 +++----
+ po/tr.po     |  118 +++----
+ po/uk.po     |  118 +++----
+ po/vi.po     |  118 +++----
+ po/zh_CN.po  |  118 +++----
+ po/zh_TW.po  |  118 +++----
+ 46 files changed, 3048 insertions(+), 3070 deletions(-)
+
 commit e277ad96bcdf70b8473e9daee1e337876660bc71
 Merge: cd96c1d5 d8b6c997
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
@@ -366,6 +783,17 @@ Date:   Wed Sep 2 23:43:09 2020 +0100
  po/LINGUAS                |    1 +
  po/pt.po                  | 2622 +++++++++++++++++++++++++++++++++++++++++
  4 files changed, 2626 insertions(+), 1 deletion(-)
+
+commit d5d1dfd497df86801cf3a478bb38cf131510ca06
+Author: Hugo Carvalho <hugokarvalho@hotmail.com>
+Date:   Tue Aug 25 15:33:55 2020 +0000
+
+    Translated using Weblate (Portuguese)
+
+    Currently translated at 100.0% (469 of 469 strings)
+
+ po/pt.po | 1137 +++++++++++++++++++++++++++++++++++-----------------------
+ 1 file changed, 691 insertions(+), 446 deletions(-)
 
 commit cbbb32bcf31490d08cc77d4176a6fbae5d18220c
 Author: Eduard Bloch <blade@debian.org>
@@ -872,6 +1300,15 @@ Date:   Wed Aug 26 12:08:38 2020 +0200
  src/wmmgr.cc | 4 ++--
  1 file changed, 2 insertions(+), 2 deletions(-)
 
+commit 2e1715bf4ba3ba31e1f16f29b73ff9e7368d6466
+Author: Hugo Carvalho <hugokarvalho@hotmail.com>
+Date:   Tue Aug 25 11:02:29 2020 +0000
+
+    Added translation using Weblate (Portuguese)
+
+ po/pt.po | 2377 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ 1 file changed, 2377 insertions(+)
+
 commit b87904338757f3c46e5b88552291cf2bd353f38d
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
 Date:   Tue Aug 25 02:18:03 2020 +0200
@@ -988,6 +1425,39 @@ Date:   Mon Aug 24 19:18:16 2020 +0200
  src/amailbox.cc | 77 ++++++++++++++++++++++++++++++++++-------------------
  src/amailbox.h  | 25 ++++++++++-------
  2 files changed, 65 insertions(+), 37 deletions(-)
+
+commit 7715e8a3b423ef633cf46955214111f6268d178f
+Author: Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com>
+Date:   Thu Aug 13 17:40:51 2020 +0000
+
+    Translated using Weblate (Portuguese (Brazil))
+
+    Currently translated at 100.0% (469 of 469 strings)
+
+ po/pt_BR.po | 12 +++---------
+ 1 file changed, 3 insertions(+), 9 deletions(-)
+
+commit 7e0f8cbdb5f9bf37c658384b789eb5a7c74f7fd0
+Author: Arif Budiman <arifpedia@gmail.com>
+Date:   Thu Jul 30 09:18:00 2020 +0000
+
+    Translated using Weblate (Indonesian)
+
+    Currently translated at 100.0% (469 of 469 strings)
+
+ po/id.po | 12 +++---------
+ 1 file changed, 3 insertions(+), 9 deletions(-)
+
+commit 95b45d5accda5c9e64c2f63091d75f69af15d5ef
+Author: Sarah Kriesch <ada.lovelace@gmx.de>
+Date:   Thu Aug 6 14:00:51 2020 +0000
+
+    Translated using Weblate (German)
+
+    Currently translated at 100.0% (469 of 469 strings)
+
+ po/de.po | 14 ++++----------
+ 1 file changed, 4 insertions(+), 10 deletions(-)
 
 commit 2d56e223d3517980e161b16b153614e40126f0d7
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
@@ -1932,6 +2402,28 @@ Date:   Wed Jul 29 23:55:18 2020 +0200
  lib/themes/CrystalBlue/titleIS.xpm               |  55 +++++-
  lib/themes/CrystalBlue/titleIT.xpm               |  46 ++++-
  73 files changed, 3229 insertions(+), 1890 deletions(-)
+
+commit 102e7f1b5df9d59338c71691ad0abe504f205791
+Author: Ferdinand Galko <galko.ferdinand@gmail.com>
+Date:   Wed Jul 29 17:29:52 2020 +0000
+
+    Translated using Weblate (Slovak)
+
+    Currently translated at 100.0% (469 of 469 strings)
+
+ po/sk.po | 14 ++++----------
+ 1 file changed, 4 insertions(+), 10 deletions(-)
+
+commit 9e0a05b3776a97bf7a3733434504aa51a9b65fbc
+Author: David Medina <medipas@gmail.com>
+Date:   Wed Jul 29 15:08:32 2020 +0000
+
+    Translated using Weblate (Catalan)
+
+    Currently translated at 100.0% (469 of 469 strings)
+
+ po/ca.po | 16 +++++-----------
+ 1 file changed, 5 insertions(+), 11 deletions(-)
 
 commit cf578cdd073800bc2eaefad3b342d969f7c1f52f
 Merge: ce1b17d9 5a97c114
@@ -5630,430 +6122,3 @@ Date:   Mon Feb 17 10:12:27 2020 +0000
 
  po/zh_TW.po | 47 +++++++++++++++--------------------------------
  1 file changed, 15 insertions(+), 32 deletions(-)
-
-commit d31b9d6b26f1366d0b4b10065173cc21f05f7994
-Merge: e8e67837 c266bbfc
-Author: openSUSE Weblate <weblate-noreply@opensuse.org>
-Date:   Mon Feb 17 05:54:54 2020 +0000
-
-    Merge branch 'origin/icewm-1-4-BRANCH' into Weblate.
-
-commit c266bbfc5ca7e2ad511e7d8d7730ada156045322
-Author: Grace Yu <grace.yu@excel-gits.com>
-Date:   Mon Feb 17 03:12:01 2020 +0000
-
-    Translated using Weblate (Chinese (China))
-
-    Currently translated at 100.0% (466 of 466 strings)
-
- po/zh_CN.po | 6 +++---
- 1 file changed, 3 insertions(+), 3 deletions(-)
-
-commit e8e6783741066dce56b61a3b82cc63a98018650e
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 16 14:37:22 2020 +0100
-
-    Make tray toggle more intuitive by toggling between only two states.
-
- src/wmframe.cc | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
-
-commit 1b6a4cf580efae47eca38995f6d67d011463011f
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 16 14:34:17 2020 +0100
-
-    Setting winoptions tray option non-zero overrules ignoreTaskBar.
-
- src/wmframe.cc | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
-
-commit c53bfb4c039b89d55e621a593a349507e667e838
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 16 14:31:14 2020 +0100
-
-    Enable toggle tray in window menu, even if IgnoreTaskBar is set, if the
-    tray option was set in the winoptions files.
-
- src/decorate.cc | 6 +++---
- 1 file changed, 3 insertions(+), 3 deletions(-)
-
-commit 05de45e2d2a6b4b2880cc1c648b1bdcb99fd9dba
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 16 14:01:04 2020 +0100
-
-    Document the window list window.
-
- man/icewm.pod | 14 ++++++++++++++
- 1 file changed, 14 insertions(+)
-
-commit 482ed7b123ec31007918ed57a6fb3f749b3f017e
-Author: Eduard Bloch <blade@debian.org>
-Date:   Sun Feb 16 05:29:37 2020 +0100
-
-    Special --max mode for menu options selector
-
-    Instead of automatic modes, pick the one with highest refresh rate.
-
-    Also configured usual indentation rules, and further refactoring.
-
- contrib/icewm-menu-xrandr | 304 ++++++++++++++++++++++++++----------------
- man/icewm-menu-xrandr.pod |  15 ++-
- 2 files changed, 202 insertions(+), 117 deletions(-)
-
-commit 4c930e6c101d4d9f3411e39bf3fd49db84037c68
-Author: scootergrisen <scootergrisen@gmail.com>
-Date:   Wed Feb 12 17:41:01 2020 +0000
-
-    Translated using Weblate (Danish)
-
-    Currently translated at 100.0% (466 of 466 strings)
-
- po/da.po | 8 ++++----
- 1 file changed, 4 insertions(+), 4 deletions(-)
-
-commit 1a744920cf3cfb35b56b26c647c930e8abfd3e37
-Author: Sarah Kriesch <ada.lovelace@gmx.de>
-Date:   Tue Feb 11 16:43:56 2020 +0000
-
-    Translated using Weblate (German)
-
-    Currently translated at 100.0% (466 of 466 strings)
-
- po/de.po | 8 ++++----
- 1 file changed, 4 insertions(+), 4 deletions(-)
-
-commit 104b788f150acf57a9f9cd6fa1a106d4ee737255
-Author: Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com>
-Date:   Tue Feb 11 00:32:49 2020 +0000
-
-    Translated using Weblate (Portuguese (Brazil))
-
-    Currently translated at 100.0% (466 of 466 strings)
-
- po/pt_BR.po | 6 +++---
- 1 file changed, 3 insertions(+), 3 deletions(-)
-
-commit 3318b1789a4793bd6c729a7ea576086b568e2a0e
-Author: Aleš Kastner <alkas@volny.cz>
-Date:   Sun Feb 9 17:04:27 2020 +0000
-
-    Translated using Weblate (Czech)
-
-    Currently translated at 100.0% (466 of 466 strings)
-
- po/cs.po | 8 ++++----
- 1 file changed, 4 insertions(+), 4 deletions(-)
-
-commit e32df48c3979064521b1658c3d09cb10fda91f4b
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 9 19:29:12 2020 +0100
-
-    Use /usr/bin/echo for -e option.
-
- autogen.sh | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
-
-commit ddc1959d6bc11a27d4f8e8c2259264750c9abec8
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 9 19:06:30 2020 +0100
-
-    1.15 works fine
-
- configure.ac | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
-
-commit 1d93ff5a0aebb205584a8708f0b8dd9679939848
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 9 19:02:54 2020 +0100
-
-    Optimize startup of taskbar.
-
- src/wmtaskbar.cc | 47 +++++++++++------------------------------------
- 1 file changed, 11 insertions(+), 36 deletions(-)
-
-commit 910ea6107c3cee4dc451cd43463a83f5ae8ce6b2
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 9 19:02:46 2020 +0100
-
-    class YStrut.
-
- src/wmtaskbar.h | 11 +++++++++++
- 1 file changed, 11 insertions(+)
-
-commit 56b19da16dc21442f4e91cada906bf244dd39f48
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 9 19:02:21 2020 +0100
-
-    remove empty handleDrag.
-
- src/movesize.cc | 6 ------
- src/wmframe.h   | 2 --
- 2 files changed, 8 deletions(-)
-
-commit cb3dfe56a9a50d6a731b5290154b0e0ab15c4d76
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 9 19:01:49 2020 +0100
-
-    remove unused handleDrag.
-
- src/atasks.h | 4 ----
- 1 file changed, 4 deletions(-)
-
-commit 95893d4019fc52cc2565d41309fe93f9cf88b049
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 9 19:01:14 2020 +0100
-
-    be silent when spying on ClientMessage.
-
- src/icesh.cc | 1 +
- 1 file changed, 1 insertion(+)
-
-commit e8633abe5aa553729b7becbda80dad55f28689ab
-Author: Yasuhiko Kamata <belphegor@belbel.or.jp>
-Date:   Sat Feb 8 23:05:41 2020 +0000
-
-    Translated using Weblate (Japanese)
-
-    Currently translated at 100.0% (466 of 466 strings)
-
- po/ja.po | 8 ++++----
- 1 file changed, 4 insertions(+), 4 deletions(-)
-
-commit 27ec9f1ecc88746dfe48b3ee7530c018af01117c
-Author: Freek de Kruijf <freek@opensuse.org>
-Date:   Sat Feb 8 20:24:46 2020 +0000
-
-    Translated using Weblate (Dutch)
-
-    Currently translated at 100.0% (466 of 466 strings)
-
- po/nl.po | 8 ++++----
- 1 file changed, 4 insertions(+), 4 deletions(-)
-
-commit d8191de450c66677a9a5aad44d8d12edce69b512
-Author: Ferdinand Galko <galko.ferdinand@gmail.com>
-Date:   Sat Feb 8 12:38:17 2020 +0000
-
-    Translated using Weblate (Slovak)
-
-    Currently translated at 100.0% (466 of 466 strings)
-
- po/sk.po | 8 ++++----
- 1 file changed, 4 insertions(+), 4 deletions(-)
-
-commit 5baa51f56f8a8c09a97b798a8c43a18e2b2902f2
-Author: David Medina <medipas@gmail.com>
-Date:   Sat Feb 8 09:45:09 2020 +0000
-
-    Translated using Weblate (Catalan)
-
-    Currently translated at 100.0% (466 of 466 strings)
-
- po/ca.po | 8 ++++----
- 1 file changed, 4 insertions(+), 4 deletions(-)
-
-commit 1251fb71f50288019f58722ea98cc566e3751fd4
-Author: Brian Bidulock <bidulock@openss7.org>
-Date:   Sat Feb 8 03:15:30 2020 -0700
-
-    do not pad day number in MDOCDATE
-
- autogen.sh | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
-
-commit 28c9265cfabb1cc04d49cc5c651193ac93982104
-Author: Brian Bidulock <bidulock@openss7.org>
-Date:   Sat Feb 8 03:09:15 2020 -0700
-
-    change where csope rule is added to po/Makefile(.in.in)
-
- autogen.sh   | 4 ++++
- configure.sh | 3 ---
- 2 files changed, 4 insertions(+), 3 deletions(-)
-
-commit d192cb5d39b48c8e9da923590fdad4c50d45d43b
-Author: Brian Bidulock <bidulock@openss7.org>
-Date:   Sat Feb 8 02:53:24 2020 -0700
-
-    add some ignores
-
- .gitignore | 5 +++++
- 1 file changed, 5 insertions(+)
-
-commit 83c76f50936e8086a75edc218081b886c77fa50c
-Author: Brian Bidulock <bidulock@openss7.org>
-Date:   Sat Feb 8 02:52:27 2020 -0700
-
-    add release file
-
- RELEASE.md | 11 +++++++++++
- 1 file changed, 11 insertions(+)
-
-commit 4f89b2cbc9beee25731a2930a70e9cd61230c7ea
-Author: Brian Bidulock <bidulock@openss7.org>
-Date:   Sat Feb 8 02:50:34 2020 -0700
-
-    update release files
-
- AUTHORS   |   25 +-
- ChangeLog | 8497 ++++++++++++++++++++++++++-------------------------------
- NEWS      | 2751 +++++++++++++++++--
- 3 files changed, 6474 insertions(+), 4799 deletions(-)
-
-commit e64a13c863c075d9f6cff087f6c5427f13672248
-Author: Brian Bidulock <bidulock@openss7.org>
-Date:   Sat Feb 8 02:46:36 2020 -0700
-
-    need force
-
- autogen.sh | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
-
-commit 354fef75011721fc594cd13163f84e976f3931bd
-Author: Brian Bidulock <bidulock@openss7.org>
-Date:   Sat Feb 8 02:46:02 2020 -0700
-
-    remove trailing space
-
- README.md.in | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
-
-commit 7eeb2217d280be693f4c5eb7bc4c808427302a2e
-Author: Brian Bidulock <bidulock@openss7.org>
-Date:   Sat Feb 8 02:40:02 2020 -0700
-
-    update po files
-
- po/ar.po     | 276 +++++++++++++++++++++++++++--------------------------
- po/be.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/bg.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/ca.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/cs.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/da.po     | 284 ++++++++++++++++++++++++++++---------------------------
- po/de.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/el.po     | 276 +++++++++++++++++++++++++++--------------------------
- po/en.po     | 274 +++++++++++++++++++++++++++--------------------------
- po/es.po     | 276 +++++++++++++++++++++++++++--------------------------
- po/fi.po     | 276 +++++++++++++++++++++++++++--------------------------
- po/fr.po     | 276 +++++++++++++++++++++++++++--------------------------
- po/he.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/hr.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/hu.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/icewm.pot | 276 +++++++++++++++++++++++++++--------------------------
- po/id.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/it.po     | 276 +++++++++++++++++++++++++++--------------------------
- po/ja.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/ko.po     | 276 +++++++++++++++++++++++++++--------------------------
- po/lt.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/lv.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/mk.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/nb.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/nl.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/no.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/pl.po     | 276 +++++++++++++++++++++++++++--------------------------
- po/pt_BR.po  | 276 +++++++++++++++++++++++++++--------------------------
- po/ro.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/ru.po     | 276 +++++++++++++++++++++++++++--------------------------
- po/sk.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/sl.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/sv.po     | 276 +++++++++++++++++++++++++++--------------------------
- po/tr.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/uk.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/vi.po     | 280 +++++++++++++++++++++++++++---------------------------
- po/zh_CN.po  | 276 +++++++++++++++++++++++++++--------------------------
- po/zh_TW.po  | 276 +++++++++++++++++++++++++++--------------------------
- 38 files changed, 5367 insertions(+), 5215 deletions(-)
-
-commit decf211cc450f73d9036d6d706529487ed6e48f5
-Merge: 0d6ceb81 29e4dc2d
-Author: Brian Bidulock <bidulock@openss7.org>
-Date:   Sat Feb 8 02:29:47 2020 -0700
-
-    Merge branch 'icewm-1-4-BRANCH' of github.com:bbidulock/icewm into
-    icewm-1-4-BRANCH
-
-commit 29e4dc2d7a83d1b2cc13dfe0d85f2017b08cd059
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sat Feb 8 08:59:20 2020 +0100
-
-    Document all task button mouse clicks.
-
- man/icewm.pod | 11 +++++++----
- 1 file changed, 7 insertions(+), 4 deletions(-)
-
-commit 1af4495250099ad2b5ba0ee9b3d0b07d1b80b7f1
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Tue Feb 4 08:48:31 2020 +0100
-
-    Implement -X for ice-wm/icewm#10.
-
- src/icesh.cc | 23 +++++++++++++++++++++++
- 1 file changed, 23 insertions(+)
-
-commit 49d887ed678ea120d263a2cff4e6f4cd2883c07d
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Mon Feb 3 23:30:10 2020 +0100
-
-    skip separators for #409.
-
- src/objbar.cc | 3 ++-
- 1 file changed, 2 insertions(+), 1 deletion(-)
-
-commit 9a021794a768ebc6df316845ca11015d5451d1ba
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 2 14:51:11 2020 +0100
-
-    Relinquish manager selection when done.
-    If exec fails then let icewm-session restart icewm.
-
- src/wmapp.cc | 24 ++++++++++++++++++------
- src/wmapp.h  |  3 +++
- 2 files changed, 21 insertions(+), 6 deletions(-)
-
-commit c762d911fffac6bccb8398ed52415aedb975278d
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 2 14:50:28 2020 +0100
-
-    Eliminate one loop in getWindowsToArrange.
-
- src/wmmgr.cc | 46 ++++++++++++++++++----------------------------
- src/wmmgr.h  |  2 +-
- 2 files changed, 19 insertions(+), 29 deletions(-)
-
-commit eb84fca49586f104c144b73f98a52d2efa2799a8
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Feb 2 14:49:43 2020 +0100
-
-    Restore close button for About and Windowlist windows.
-
- src/wmclient.cc | 7 +++----
- 1 file changed, 3 insertions(+), 4 deletions(-)
-
-commit 82498c0a8fc319268ca477e5b49c8a602f0b71f5
-Author: David Medina <medipas@gmail.com>
-Date:   Mon Jan 27 15:32:38 2020 +0000
-
-    Translated using Weblate (Catalan)
-
-    Currently translated at 100.0% (465 of 465 strings)
-
- po/ca.po | 4 ++--
- 1 file changed, 2 insertions(+), 2 deletions(-)
-
-commit 0bf5827938ca2b550fe05800867e982108d99807
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Jan 26 14:59:10 2020 +0100
-
-    Use YProperty and setProperty to reduce unreadable code.
-
- src/wmclient.cc | 724 +++++++++++-----------------------------------------
- 1 file changed, 156 insertions(+), 568 deletions(-)
-
-commit 8a25f799578bdef785319065c0af7d7e4aca8077
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Date:   Sun Jan 26 14:58:20 2020 +0100
-
-    Use YProperty to simplify.
-
- src/wmmgr.cc | 72 ++++++++++++++++++--------------------------------------
- 1 file changed, 23 insertions(+), 49 deletions(-)
